<resources>
    <string name="app_name">Ticket-Booking</string>
    <string name="skybird">SKYBIRD</string>
    <string name="Title">Fly anywhere easily\n without obstacles</string>
    <string name="subTitle">Experience the unparalleled\n freedom of unhindered\n flight as you effortlessly traverse</string>
    <string name="get_started">GET STARTED</string>
    <string name="search_flights">Search Flights</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="toShort">to</string>
    <string name="classSearch">class</string>
    <string name="fromShort">from</string>
</resources>