<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".activity.TicketDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:background="@drawable/blue_bg_bottom_corner">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/world_half" />

                <ImageView
                    android:id="@+id/backBtnTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Ticket Detail"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/backBtnTicket"
                    app:layout_constraintStart_toEndOf="@+id/backBtnTicket"
                    app:layout_constraintTop_toTopOf="@+id/backBtnTicket" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:background="@drawable/white_bg_main"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_4sdp">


                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:scaleType="fitXY"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/arrivalTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="time"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/logo"
                        app:layout_constraintStart_toStartOf="@+id/logo"
                        app:layout_constraintTop_toBottomOf="@+id/logo" />

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/arrivalTxt"
                        app:srcCompat="@drawable/line_airple_blue" />

                    <TextView
                        android:id="@+id/fromTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toTopOf="@id/fromShortTxt"
                        app:layout_constraintEnd_toStartOf="@id/imageView11"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/arrivalTxt" />

                    <TextView
                        android:id="@+id/fromShortTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fromShort"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/imageView11"
                        app:layout_constraintEnd_toEndOf="@id/fromTxt"
                        app:layout_constraintStart_toStartOf="@id/fromTxt"
                        app:layout_constraintTop_toBottomOf="@id/fromTxt" />

                    <TextView
                        android:id="@+id/toTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toTopOf="@id/toShortTxt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageView11"
                        app:layout_constraintTop_toTopOf="@id/imageView11" />

                    <TextView
                        android:id="@+id/toShortTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toShort"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                        app:layout_constraintEnd_toEndOf="@+id/toTxt"
                        app:layout_constraintStart_toStartOf="@id/toTxt"
                        app:layout_constraintTop_toBottomOf="@id/toTxt" />

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="16dp"
                        android:scaleType="fitXY"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView11"
                        app:srcCompat="@drawable/dash_line" />

                    <TextView
                        android:id="@+id/priceTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:text="$0.0"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView12"
                        app:srcCompat="@drawable/seat_blue" />

                    <TextView
                        android:id="@+id/classTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:text="@string/classSearch"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/imageView13"
                        app:layout_constraintStart_toEndOf="@id/imageView13"
                        app:layout_constraintTop_toTopOf="@id/imageView13" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="From"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/fromSmallTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="Date"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/dateTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="To"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/toSmallTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="Time"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/timeTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/dash_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Class"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/classTxtTicket"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="Seats"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/seatTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Airlines"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/airlinesTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="Price"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/priceTxtTicket"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:src="@drawable/qrcode" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/dash_line" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/barcode"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_18sdp"/>
            </LinearLayout>
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/downloadTicketBtn"
                android:text="Download Ticket"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/blue_bg_search_btn"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/white"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>